<resources>
    <string name="app_name">Simple User Interface</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="button_simple_dialog">Simple dialog</string>
    <string name="button_progress_dialog">Progress dialog</string>
    <string name="button_option_dialog">Option dialog</string>
    <string name="button_list_dialog">List dialog</string>
    <string name="button_custom_layout_dialog">Custom layout</string>
    <string name="title_activity_message">MessageActivity</string>
</resources>
