<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="me.cafecode.simpleuserinterface.DialogActivity">

    <Button
        android:id="@+id/button_simple_dialog"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="simpleAlertDialog"
        android:text="@string/button_simple_dialog"/>

    <Button
        android:id="@+id/button_option_dialog"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_option_dialog"/>

    <Button
        android:id="@+id/button_progress_dialog"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_progress_dialog"/>

    <Button
        android:id="@+id/button_list_dialog"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="listAlertDialog"
        android:text="@string/button_list_dialog"/>

    <Button
        android:id="@+id/button_custom_layout_dialog"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_custom_layout_dialog"/>

</LinearLayout>
